adding dev 101 html & css

--- a/index.html
+++ b/index.html
@@ -13,10 +13,24 @@
 
     <body>
         <header>
-            <h1>Cool Web Project</h1>
+            <h1>Epic Mountain Adventure</h1>
         </header>
 
-        <main></main>
+        <main>
+            
+            <img src="./assets/Mountains.jpg"
+
+          <div>
+              <ol>
+                  <li>
+                      Perfect for hapless travelers!
+                  </li>
+                  <li>
+                      Absolutely riddled with monsters and pitfalls
+                  </li>
+              </ol>
+          </div>
+        </main>
 
         <footer>&copy; 2021 Aspiring Software Developer</footer>
 
