--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
         <link rel="stylesheet" href="./styles/style.css" />
        
@@ -13,7 +10,7 @@
 
     <body>
         <header>
-            <h1>Epic Mountain Adventure</h1>
+            <h1>Epic Mountain</h1>
         </header>
 
         <main>
@@ -33,7 +30,6 @@
         </main>
 
         <footer>&copy; 2021 Aspiring Software Developer</footer>
-
-        <script type="module" src="./app.js"></script>
+        
     </body>
 </html>
