--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <header>
-            <h1>Epic Mountain</h1>
+            <h1>Epic Mountain Adventure</h1>
         </header>
 
         <main>
@@ -29,7 +29,9 @@
           </div>
         </main>
 
+        <script src="app.js"></script>
+
         <footer>&copy; 2021 Aspiring Software Developer</footer>
-        
+
     </body>
 </html>
